--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,15 @@ body {
   background-color: #ffffff;
 }
 
+.reloj {
+	display:inline-block;
+	color:#ffffff;
+	padding:30px;
+	font-weight:bold;
+	font-size:40px;
+
+}
+
 .carrito-menu{
   display: flex;
   justify-content: space-between;
